stylesheet.less
@import "@{templateCommon}/basekit-bootstrap.less";

body {
    background-color: @color-swatch1;
    margin: 0;
    padding: 0;
}

.wrapper {
    width: 90%;
    margin: 0 5%;
}

/* ===============================
   CUSTOM CSS
   =============================== */

.main {
    padding: 2em 0
}

body.edit .widget.navigation, body.edit .widget.extendednavigation {
    overflow: visible;
}

/* DEFAULT PAGE TYPE */

.bk-pt-default header.bk-header {
    border-bottom: 1px solid@color-swatch2;
}

/* ===============================
   HEADER
   =============================== */

header.bk-header {
    padding: 40px 0;
    background-color: @color-swatch7;
    @media @tablet {
        padding: 20px 0;
    }
}

.companyheader {
    display: block;
    float: left;
    padding: 0;
}

/* COMPANY NAME */

.widget.companyname {
    display: block;
    float: left;
    margin-top: 7px;
}

/* LOGO */

.widget.logo {
    display: block;
    float: left;
    margin-right: 14px;
}

/* ===============================
   FOOTER
   =============================== */

footer.bk-footer {
    background-color: @color-swatch4;
    border-top: 1px solid @color-swatch2;
    padding: 4em 0 0;
    margin-top: 3em;
    color: @color-swatch1;
    @media @mobile {
        padding: 2.5em 0 0;
    }
    h1, h2, h3, h4 {
        padding-bottom: 20px;
        color: @color-swatch1;
    }
    .footer2 {
        background-color: darken(@color-swatch4,3%);
        padding: 1em 0 0.4em;
        margin-top: 4em;
        @media  @mobile {
            padding: 2em 0;
            margin-top: 3em;
        }
        .columns-two-right {
            text-align: left;
            @media @mobile {
                text-align: right;
            }
        }
    }
}

/* ===============================
   EXTENDED NAVIGATION
   =============================== */

.widget {
    &.extendednavigation {
        float: right;
        position: relative;
        max-width: 691px;
        margin: 4px 0;
        ul {
            float: left;
            margin: 0;
            padding: 0;
            li {
                float: left;
                display: block;
                &.folder {
                    &:after {
                        top: 45%;
                        right: 16px;
                    }
                }
            }
        }
    }
}

.widget.extendednavigation ul li a,
.widget.extendednavigation ul li.folder .text {
    display: block;
    padding: 4px 30px;
}

.widget.extendednavigation ul li a:hover,
.widget.extendednavigation ul li.folder .text:hover {
    color: @font-swatch6-color-hover;
    text-decoration: none;
}

/* DROPDOWN MENU */

.widget.extendednavigation li:hover > ul {
    display: block;
    position: absolute;
    width: 56%;
    background-color: @color-swatch7;
    border: 1px solid @color-swatch2;
    z-index: 500;
    padding: 20px 0;
    margin: 0;
}

.widget.extendednavigation li:hover > ul > li {
    display: block;
    width: 100%;
    -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
    -moz-box-sizing: border-box; /* Firefox, other Gecko */
    box-sizing: border-box; /* Opera/IE 8+ */
}

.widget.extendednavigation li:hover > ul > li > a {
    display: block;
    color: @color-swatch5;
    padding: 0;
}

/* ===============================
   FEATURE
   =============================== */

.widget.feature .feature-bgimg {
    height: 500px
}

.widget.feature .content {
    display: block!important;
    padding: 6.5em 0;
    height: 500px;
    text-align: center;
}

/* FEATURE TITLE */

.widget.feature h2 span,
.widget.feature h3 span {
    display: inline-block;
}

.widget.feature h3 span {
}

.widget.feature h2 {
    font-family: @font-swatch8-font-family;
    font-size: @font-swatch8-font-size;
    font-weight: @font-swatch8-font-weight;
    line-height: @font-swatch8-line-height;
    color: @font-swatch8-color;
    letter-spacing: @font-swatch8-letter-spacing;
}

/* FEATURE STRAPLINE */

.widget.feature h3 {
    font-family: @font-swatch9-font-family;
    font-size: @font-swatch9-font-size;
    font-weight: @font-swatch9-font-weight;
    line-height: @font-swatch9-line-height;
    color: @font-swatch9-color;
    letter-spacing: @font-swatch9-letter-spacing;
}

/* FEATURE BUTTON */

.widget.feature button {
    font-family: @font-swatch7-font-family;
    font-size: .8em;
    font-weight: @font-swatch7-font-weight;
    line-height: @font-swatch7-line-height;
    color: @font-swatch7-color;
    letter-spacing: @font-swatch7-letter-spacing;
    background-color: @font-swatch7-background-color;
    padding: 8px 16px;
    border: 1px solid darken(@color-swatch3,5%);
    -webkit-border-radius: 3px;
    -moz-border-radius: 3px;
    border-radius: 3px;
    box-shadow: inset 0 2px 2px rgba(255, 255, 255, 0.2);
    text-decoration: none;
    text-shadow: 0 1px 0px rgba(0,0,0,0.2);
}

.widget.feature button:hover {
    background-color: @font-swatch7-background-color-hover;
    cursor: pointer;
}

.widget.feature button.btn.justifyleft {
    text-align: left
}

.widget.feature button.btn.justifycenter {
    text-align: center
}

.widget.feature button.btn.justifyright {
    text-align: right
}

.widget.feature button.btn.justifyfull {
    text-align: justify
}

.widget.feature button.btn.italic {
    font-style: italic
}

.widget.feature button.btn.bold {
    font-weight: bold
}

.widget.feature button span {
    vertical-align: center
}

.widget.feature button i {
    margin-right: 5px
}

/* ===============================
   FEATURE LAYOUTS
   =============================== */

/* LEFT ALIGN */

.widget.feature.align-left .content {
    width: 100%;
    text-align: left;
}

/* CENTER ALIGN */

.widget.feature.align-center .content {
    width: 100%;
    text-align: center;
}

/* RIGHT ALIGN */

.widget.feature.align-right .content {
    width: 100%;
    text-align: right;
}
/* ... */

